Added LINQ connection

--- a/JoMAR/Web.config
+++ b/JoMAR/Web.config
@@ -5,10 +5,13 @@
   -->
 
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="JoMAR.Properties.Settings.ConnString" connectionString="Data Source=malmen.hin.no;Initial Catalog=gruppe2_h11;User ID=gruppe2"
+      providerName="System.Data.SqlClient" />
+    <add name="gruppe2_h11ConnectionString" connectionString="Data Source=malmen.hin.no;Initial Catalog=gruppe2_h11;User ID=gruppe2;Password=grp2.hin"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
