edit create rooms

--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -171,6 +171,8 @@
     <Content Include="Views\Rooms\Chat.cshtml" />
     <Content Include="Views\Rooms\PublicRooms.cshtml" />
     <Content Include="Views\Rooms\getRoom.cshtml" />
+    <Content Include="Views\Rooms\ecRooms.cshtml" />
+    <Content Include="Views\Rooms\edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
