--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -177,6 +177,7 @@
     <Content Include="Views\Chat\Index.cshtml" />
     <Content Include="Views\Rooms\editRooms.cshtml" />
     <Content Include="Views\Rooms\PublicRooms.cshtml" />
+    <Content Include="Views\Rooms\MyRooms.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
