--- a/JoMAR/Web.config
+++ b/JoMAR/Web.config
@@ -8,7 +8,7 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="JoMAR.Properties.Settings.ConnString" connectionString="Data Source=malmen.hin.no;Initial Catalog=gruppe2_h11;User ID=gruppe2;"
+    <add name="JoMAR.Properties.Settings.ConnString" connectionString="Data Source=malmen.hin.no;Initial Catalog=gruppe2_h11;User ID=gruppe2"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 
