--- a/JoMAR/Web.config
+++ b/JoMAR/Web.config
@@ -7,10 +7,7 @@
 <configuration>
   <configSections>
   </configSections>
-  <connectionStrings>
-    <add name="JoMAR.Properties.Settings.ConnString" connectionString="Data Source=malmen.hin.no;Initial Catalog=gruppe2_h11;User ID=gruppe2"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="ConnectionStrings.config"/>
 
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
