assume unchanged ConnectionString.config

--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -158,6 +158,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ConnectionStrings.config" />
     <None Include="JodA.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>JodA.designer.cs</LastGenOutput>
