--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -173,6 +173,8 @@
     <Content Include="Views\Rooms\MyRooms.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Chat\ViewPage1.cshtml" />
+    <Content Include="Views\Rooms\deleteRooms.cshtml" />
+    <Content Include="Views\Rooms\delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
