--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -174,6 +174,8 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Rooms\deleteRooms.cshtml" />
     <Content Include="Views\Rooms\delete.cshtml" />
+    <Content Include="Views\Rooms\eProfile.cshtml" />
+    <Content Include="Views\Rooms\profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
