register with full name and cell phone

--- a/JoMAR/Web.config
+++ b/JoMAR/Web.config
@@ -40,10 +40,10 @@
       </providers>
     </membership>
 
-    <profile>
+    <profile inherits="JoMAR.Models.Profile">
       <providers>
         <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="JoMAR.Properties.Settings.ConnString" applicationName="/" />
       </providers>
     </profile>
 
