--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -84,7 +84,8 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ChatModels.cs" />
-    <Compile Include="Models\Gravatar.cs" />
+    <Compile Include="Models\Profile.cs" />
+    <Compile Include="Models\Tools.cs" />
     <Compile Include="Models\SMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
