--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ChatModels.cs" />
+    <Compile Include="Models\GlobalModel.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\Tools.cs" />
     <Compile Include="Models\SMS.cs" />
@@ -93,6 +94,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Views\JoMARViewPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
