--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Models\ChatModels.cs" />
     <Compile Include="Models\GlobalModel.cs" />
     <Compile Include="Models\Profile.cs" />
+    <Compile Include="Models\Rooms.cs" />
     <Compile Include="Models\Tools.cs" />
     <Compile Include="Models\SMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
