--- a/JoMAR/JoMAR.csproj
+++ b/JoMAR/JoMAR.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ChatModels.cs" />
     <Compile Include="Models\GlobalModel.cs" />
-    <Compile Include="Models\JSon.cs" />
+    <Compile Include="Models\Jason.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\Rooms.cs" />
     <Compile Include="Models\Invite.cs" />
